--- a/index.html
+++ b/index.html
@@ -117,21 +117,21 @@
         <div class="content js-fade">
             <h2>Se diferenciar, é ter uma marca forte no digital</h2>
             <div class="cases">
-                <a href="#">
+                <a href="pags/projetos/descripti/descripti.html">
                     <div id="case1" class="case">
                         <div class="mais-info">
                             <img src="assets/icon/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="pags/projetos/explorers/">
                     <div id="case2" class="case">
                         <div class="mais-info">
                             <img src="assets/icon/light-arrow-right.svg" alt="seta-direita">
                         </div>
                     </div>
                 </a>
-                <a href="#">
+                <a href="pags/projetos/tango/tango.html">
                     <div id="case3" class="case">
                         <div class="mais-info">
                             <img src="assets/icon/light-arrow-right.svg" alt="seta-direita">
