--- a/pags/projetos/descripti/descripti.html
+++ b/pags/projetos/descripti/descripti.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Descript</title>
     
-    <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
+    <link rel="stylesheet" href="../../../assets/padrao-esplee/font.css">
+    <link rel="stylesheet" href="../../../assets/padrao-esplee/padrao-esplee.css">
 
     <!--Padrão Mobile-->
     <link rel="stylesheet" href="../css/style.css" media="all">
@@ -26,15 +27,22 @@
         <div id="header-content">
                 <nav>
                     <div class="icon">
-                        <a href="#" rel="back">
+                        <a href="../projetos.html" rel="back">
                             <img src="imagens/light-arrow-left.svg" alt="voltar">
                         </a>
                     </div>
                     <div id="nav-links">
-                        <a href="#">Na Rota</a>
                         <a href="../projetos.html">Projeto</a>
                         <a href="#">Sobre Nós</a>
                         <a href="../../contato/contato.html">Contato</a>
+                        <div class="social-icon">
+                            <a href="#">
+                                <img src="imagens/behance-light.png" alt="icon-behance">
+                            </a>
+                            <a href="#">
+                                <img src="imagens/instagram-light.png" alt="icon-instagram">
+                            </a>
+                        </div>
                     </div>
                     <div class="nav-ico" id="nav-menu-ico">
                         <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
@@ -47,10 +55,18 @@
                             </div>
                         </div>
                         <div class="links">
-                            <a href="#">Na Rota</a>
-                            <a href="../projetos.html">Projeto</a>
+                            <a href="../../../index.html">Home</a>
+                            <a href="../../projetos/projetos.html">Projeto</a>
                             <a href="#">Sobre Nós</a>
                             <a href="../../contato/contato.html">Contato</a>
+                            <div class="social-icon">
+                                <a href="#">
+                                    <img src="imagens/behance-light.png" alt="icon-behance">
+                                </a>
+                                <a href="#">
+                                    <img src="imagens/instagram-light.png" alt="icon-instagram">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </nav>
@@ -61,9 +77,9 @@
         <div class="triang top left"></div>
         <div class="content">
             <nav>
-                <a href="#">Home</a>
+                <a href="../../../index.html">Home</a>
                 <img src="imagens/dark-arrow-right.svg" alt="seta-direita">
-                <a href="#">Projetos</a>
+                <a href="../projetos.html">Projetos</a>
                 <img src="imagens/dark-arrow-right.svg" alt="seta-direita">
                 <a href="#">Descript</a>
             </nav>
@@ -172,12 +188,16 @@
     <footer>
         <img class="logo-footer" src="imagens/dark-principal_1.svg" alt="logo-footer">
         <div class="nav-footer">
-            <div class="icon-footer"></div>
-            <div class="icon-footer"></div>
+            <a href="#">
+                <div class="icon-footer"><img src="imagens/behance-dark.png" alt="icon-instagram"></div>
+            </a>
+            <a href="#">
+                <div class="icon-footer"><img src="imagens/instagram-dark.png" alt="icon-behance"></div>
+            </a>
         </div>
     </footer>
-    <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
+    <script src="../../../assets/padrao-esplee/jquery-3.6.0.js"></script>
+    <script src="../../../assets/padrao-esplee/padrao-esplee.js"></script>
     <script src="../projetos.js"></script>
 </body>
 </html>
