--- a/pags/projetos/explorers/explorers.html
+++ b/pags/projetos/explorers/explorers.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explores</title>
 
-    <link rel="stylesheet" href="../../../../padrao-esplee/padrao-esplee.css">
+    <link rel="stylesheet" href="../../../assets/padrao-esplee/font.css">
+
+    <link rel="stylesheet" href="../../../assets/padrao-esplee/padrao-esplee.css">
 
     <!--Padrão Mobile-->
     <link rel="stylesheet" href="../css/style.css" media="all">
@@ -24,36 +26,51 @@
 <body>
     <header>
         <div id="header-content">
-            <nav>
-                <div class="icon">
-                    <a href="#" rel="back">
-                        <img src="imagens/light-arrow-left.svg" alt="voltar">
-                    </a>
-                </div>
-                <div id="nav-links">
-                    <a href="#">Na Rota</a>
-                    <a href="../projetos.html">Projeto</a>
-                    <a href="#">Sobre Nós</a>
-                    <a href="../../contato/contato.html">Contato</a>
-                </div>
-                <div class="nav-ico" id="nav-menu-ico">
-                    <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
-                </div>
-                <div class="background"></div>
-                <div class="navbar">
-                    <div class="navbar-icon">
-                        <div class="nav-ico">
-                            <img src="imagens/light-cancel.svg" alt="">
-                        </div>
+                <nav>
+                    <div class="icon">
+                        <a href="../projetos.html" rel="back">
+                            <img src="imagens/light-arrow-left.svg" alt="voltar">
+                        </a>
                     </div>
-                    <div class="links">
-                        <a href="#">Na Rota</a>
+                    <div id="nav-links">
                         <a href="../projetos.html">Projeto</a>
                         <a href="#">Sobre Nós</a>
                         <a href="../../contato/contato.html">Contato</a>
+                        <div class="social-icon">
+                            <a href="#">
+                                <img src="imagens/behance-light.png" alt="icon-behance">
+                            </a>
+                            <a href="#">
+                                <img src="imagens/instagram-light.png" alt="icon-instagram">
+                            </a>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                    <div class="nav-ico" id="nav-menu-ico">
+                        <a href="#"><img id="img-cancel" src="imagens/light-menu.svg" alt="menu-ico"></a>
+                    </div>
+                    <div class="background"></div>
+                    <div class="navbar">
+                        <div class="navbar-icon">
+                            <div class="nav-ico">
+                                <img src="imagens/light-cancel.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="links">
+                            <a href="../../../index.html">Home</a>
+                            <a href="../../projetos/projetos.html">Projeto</a>
+                            <a href="#">Sobre Nós</a>
+                            <a href="../../contato/contato.html">Contato</a>
+                            <div class="social-icon">
+                                <a href="#">
+                                    <img src="imagens/behance-light.png" alt="icon-behance">
+                                </a>
+                                <a href="#">
+                                    <img src="imagens/instagram-light.png" alt="icon-instagram">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </nav>
         </div>
     </header>
     <main>
@@ -61,9 +78,9 @@
         <div class="triang top left"></div>
         <div class="content">
             <nav>
-                <a href="#">Home</a>
+                <a href="../../../index.html">Home</a>
                 <img src="imagens/dark-arrow-right.svg" alt="seta-direita">
-                <a href="#">Projetos</a>
+                <a href="../projetos.html">Projetos</a>
                 <img src="imagens/dark-arrow-right.svg" alt="seta-direita">
                 <a href="#">Explorers</a>
             </nav>
@@ -266,12 +283,16 @@
     <footer>
         <img class="logo-footer" src="imagens/dark-principal_1.svg" alt="logo-footer">
         <div class="nav-footer">
-            <div class="icon-footer"></div>
-            <div class="icon-footer"></div>
+            <a href="#">
+                <div class="icon-footer"><img src="imagens/behance-dark.png" alt="icon-instagram"></div>
+            </a>
+            <a href="#">
+                <div class="icon-footer"><img src="imagens/instagram-dark.png" alt="icon-behance"></div>
+            </a>
         </div>
     </footer>
-    <script src="../../../../padrao-esplee/jquery-3.6.0.js"></script>
-    <script src="../../../../padrao-esplee/padrao-esplee.js"></script>
+    <script src="../../../assets/padrao-esplee/jquery-3.6.0.js"></script>
+    <script src="../../../assets/padrao-esplee/padrao-esplee.js"></script>
     <script src="../projetos.js"></script>
 </body>
 </html>
