--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
                 </div>
                 <div id="nav-links">
                     <a href="pags/projetos/projetos.html">Projeto</a>
-                    <a href="#">Sobre Nós</a>
                     <a href="pags/contato/contato.html">Contato</a>
                     <div class="social-icon">
                         <a href="#">
@@ -55,10 +54,7 @@
                         <a href="pags/projetos/projetos.html">
                             Projeto
                         </a>
-                        <a href="#">Sobre Nós</a>
-                        <a href="pags/contato/contato.html">
-                            Contato
-                        </a>
+                        <a href="pags/contato/contato.html">Contato</a>
                         <div class="social-icon">
                             <a href="#">
                                 <img src="assets/icon/behance-light.png" alt="icon-behance">
@@ -75,7 +71,7 @@
                     <h1><strong>Explore</strong> o poder da sua <strong>marca</strong></h1>
                     <p>Todos tem uma história que precisa ser contada</p>
                 </div>
-                <a href="#">
+                <a href="pags/contato/contato.html">
                     <button class="primario">Começar projeto</button>
                 </a>
                 <div id="seta">
@@ -124,7 +120,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="pags/projetos/explorers/">
+                <a href="pags/projetos/explorers/explorers.html">
                     <div id="case2" class="case">
                         <div class="mais-info">
                             <img src="assets/icon/light-arrow-right.svg" alt="seta-direita">
@@ -139,7 +135,7 @@
                     </div>
                 </a>
             </div>
-            <a href="">
+            <a href="pags/projetos/projetos.html">
                 <button class="outline-light">+ Cases</button>
             </a>
         </div>
@@ -208,7 +204,7 @@
         <div class="content js-fade">
             <h1>Pronto para <strong>começar</strong>?</h1>
             <p>Estamos aqui para te ajudar nessa jornada</p>
-            <a href="#">
+            <a href="pags/contato/contato.html">
                 <button class="primario">Começar projeto</button>
             </a>
         </div>
