--- a/pags/contato/contato.html
+++ b/pags/contato/contato.html
@@ -23,14 +23,13 @@
                 </div>
                 <div id="nav-links">
                     <a href="../projetos/projetos.html">Projeto</a>
-                    <a href="#">Sobre Nós</a>
                     <a href="#">Contato</a>
                     <div class="social-icon">
                         <a href="#">
-                            <img src="imagens/behance-dark.png" alt="icon-behance">
+                            <img src="imagens/behance-light.png" alt="icon-behance">
                         </a>
                         <a href="#">
-                            <img src="imagens/instagram-dark.png" alt="icon-instagram">
+                            <img src="imagens/instagram-light.png" alt="icon-instagram">
                         </a>
                     </div>
                 </div>
@@ -45,11 +44,8 @@
                         </div>
                     </div>
                     <div class="links">
-                        <a href="#">Home</a>
-                        <a href="../projetos/projetos.html">
-                            Projeto
-                        </a>
-                        <a href="#">Sobre Nós</a>
+                        <a href="../../index.html">Home</a>
+                        <a href="../projetos/projetos.html">Projeto</a>
                         <a href="#">Contato</a>
                         <div class="social-icon">
                             <a href="#">
